# Citadel

./: .gitignore  Cargo.toml  Citadel.postman_collection.json  README.md  docker-compose.yml  package.json  tsconfig.json
bruno/Citadel/: bruno.json
citadel-app/: package-lock.json  package.json  tailwind.config.js
citadel-app/public/: index.html
citadel-app/src/: App.css  App.jsx
citadel-drone/: .eslintrc.js  .prettierrc.js  <  Cargo.toml  flake.nix  package.json  tsconfig.json
citadel-drone/src/: dispatcher.ts  hive.rs  job.rs  logger.rs  main.rs  parser.rs  router.ts  server.ts  sync.rs
citadel-drone/src/controllers/: application.ts  instance.ts  ping.ts
citadel-drone/src/executors/: error.rs  instance.rs  instance_create.ts  instance_delete.ts  instance_start.ts  instance_stop.ts  mod.rs
citadel-drone/src/lib/: docker.ts  hive.ts  sync.ts
citadel-drone/src/providers/: base.ts  docker.rs  docker.ts  mod.rs
citadel-hive/: <  Cargo.toml  nodemon.json  package.json  tsconfig.json  webpack.config.js
citadel-hive/configurations/gmod-4000/: config.json
citadel-hive/src/: main.rs  router.ts  seed.ts  server.ts
citadel-hive/src/controllers/: account.ts  base.rs  drone.rs  drone.ts  image.ts  instance.ts  job.ts  mod.rs  server.ts  session.ts
citadel-hive/src/controllers/models/: job.ts
citadel-hive/src/lib/: auth-middleware.ts  config-query.ts  drone-query.ts  logger.ts  name-generator.ts  redis.ts
citadel-hive/src/models/: account.ts  drone.rs  drone.ts  instance.ts  job.ts  server.ts  session.ts
citadel-lib/: package.json  tsconfig.json
(+60 files in other folders)
