[package]
name = "citadel-drone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.75"
bollard = "0.15.0"
clap = { version = "4.4.2", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures-util = "0.3.30"
log = "0.4.20"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.193", features = ["serde_derive"] }
serde_json = "1.0.108"
time = { version = "0.3.31", features = ["serde", "parsing"] }
tokio = { version = "1.35.1", features = ["full"] }
